crates/wgso/tests/cases_invalid/directive_arg_parsing/.expected
error: value has an offset of 4 bytes in `buffer_alignment`, which is not a multiple of 256 bytes
 --> ./tests/cases_invalid/directive_arg_parsing/alignment.wgsl:2:22
  |
2 | #run alignment(param=buffer_alignment.field2)
  |                      ^^^^^^^^^^^^^^^^^^^^^^^
  |
error: duplicated parameter
 --> ./tests/cases_invalid/directive_arg_parsing/duplicated.wgsl:2:69
  |
2 | #run duplicated(param1=buffer_duplicated, param2=buffer_duplicated, param1=buffer_duplicated)
  |                                                                     ^^^^^^
  |
error: found argument with type `i32`, expected uniform type `u32`
 --> ./tests/cases_invalid/directive_arg_parsing/invalid_type.wgsl:2:25
  |
2 | #run invalid_type(value=buffer_invalid_type)
  |                         ^^^^^^^^^^^^^^^^^^^
  |
error: found argument with type `MyStruct`, expected uniform type `MyStruct`
 --> ./tests/cases_invalid/directive_arg_parsing/invalid_type_same_name1.wgsl:1:35
  |
1 | #run invalid_type_same_name(param=buffer_invalid_type_same_name)
  |                                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
error: missing uniform argument `param`
 --> ./tests/cases_invalid/directive_arg_parsing/missing.wgsl:2:6
  |
2 | #run missing()
  |      ^^^^^^^
  |
error: no uniform variable `unknown_param` in shader `unknown`
 --> ./tests/cases_invalid/directive_arg_parsing/unknown.wgsl:2:14
  |
2 | #run unknown(unknown_param=buffer_unknown)
  |              ^^^^^^^^^^^^^
  |
error: unknown storage variable `unknown_storage`
 --> ./tests/cases_invalid/directive_arg_parsing/unknown_storage.wgsl:2:28
  |
2 | #run unknown_storage(param=unknown_storage)
  |                            ^^^^^^^^^^^^^^^
  |
error: unknown field for type `u32`
 --> ./tests/cases_invalid/directive_arg_parsing/unknown_storage_field.wgsl:2:41
  |
2 | #run unknown_storage_field(param=buffer.field)
  |                                         ^^^^^
  |